fix(helpdesk): [AIEXP-9005] add horizontal scroll to SecondaryNavbar (#12582)

--- a/apps/helpdesk/src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
+++ b/apps/helpdesk/src/pages/common/components/SecondaryNavbar/SecondaryNavbar.less
@@ -35,6 +35,9 @@
 
     :global(.navbar).navbar {
         display: flex;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        overflow-y: hidden;
         background-color: var(--elevation-neutral-default);
         border-bottom: 1px solid var(--border-neutral-default);
         padding: 0 var(--spacing-lg);
@@ -44,6 +47,7 @@
     .link {
         color: var(--content-neutral-tertiary);
         position: relative;
+        flex-shrink: 0;
         margin: 0;
         transition: color var(--animation-duration) var(--animation-timing-fn);
 
